--- a/worlds/outer_wilds/shared_static_logic/connections.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/connections.jsonc
@@ -311,7 +311,7 @@
     { "category": "hn2", "from": "Magistarium", "to": "Magistarium Outer Planes", "requires": [
         { "item": "Magistarium Dormitory Access Code" }, // enter the Magister's room
         { "item": "Memory Cube Interface" }, // close the hatch so you can safely remove your spacesuit
-        { "item": "Magistarium Dormitory Access Code" } // to get the battery
+        { "item": "Magistarium Engine Access Code" } // to get the battery
     ] },
 
     { "category": "fq", "from": "Hourglass Twins", "to": "Lost Strings", "requires": [
