start converting item/location notes into proper logic files

--- a/worlds/nine_sols/shared_static_logic/items.jsonc
+++ b/worlds/nine_sols/shared_static_logic/items.jsonc
@@ -1,103 +1,161 @@
 [
-    // per AP docs, 1734473680 was randomly chosen from the range of
-    // positive 32-bit integers to avoid conflicts with other AP games
-    { "code": 1734473680, "name": "Nothing", "type": "filler" }, // no longer used, here for backwards compatibility
+    { "code": 1, "name": "Seal of Kuafu", "type": "progression" },
+    { "code": 2, "name": "Seal of Goumang", "type": "progression" },
+    { "code": 3, "name": "Seal of Yanlao", "type": "progression" },
+    { "code": 4, "name": "Seal of Jiequan", "type": "progression" },
+    { "code": 5, "name": "Seal of Lady Ethereal", "type": "progression" },
+    { "code": 6, "name": "Seal of Ji", "type": "progression" },
+    { "code": 7, "name": "Seal of Fuxi", "type": "progression" },
+    { "code": 8, "name": "Seal of Nuwa", "type": "progression" },
 
-    { "code": 1734473681, "name": "Launch Codes", "type": "progression" },
+    { "code": 10, "name": "Mystic Nymph: Scout Mode", "type": "progression" },
+    { "code": 11, "name": "Tai-Chi Kick", "type": "progression" },
+    { "code": 12, "name": "Charged Strike", "type": "progression" },
+    { "code": 13, "name": "Air Dash", "type": "progression" },
+    { "code": 14, "name": "Unbounded Counter", "type": "progression" },
+    { "code": 15, "name": "Cloud Leap", "type": "progression" },
+    { "code": 16, "name": "Super Mutant Buster", "type": "progression" },
+    { "code": 17, "name": "Azure Bow", "type": "useful" },
 
-    { "code": 1734473732, "name": "Spacesuit", "type": "progression" },
-    { "category": "base", "split_translator": false, "code": 1734473682, "name": "Translator", "type": "progression" },
-    { "category": "base", "split_translator": true, "code": 1734473746, "name": "Translator (Hourglass Twins)", "type": "progression" },
-    { "category": "base", "split_translator": true, "code": 1734473747, "name": "Translator (Timber Hearth)", "type": "progression" },
-    { "category": "base", "split_translator": true, "code": 1734473748, "name": "Translator (Brittle Hollow)", "type": "progression" },
-    { "category": "base", "split_translator": true, "code": 1734473749, "name": "Translator (Giant's Deep)", "type": "progression" },
-    { "category": "base", "split_translator": true, "code": 1734473750, "name": "Translator (Dark Bramble)", "type": "progression" },
-    { "category": "base", "split_translator": true, "code": 1734473751, "name": "Translator (Other)", "type": "progression" },
-    { "category": "base", "code": 1734473683, "name": "Signalscope", "type": "progression" },
-    { "code": 1734473684, "name": "Scout", "type": "progression" },
-    { "code": 1734473685, "name": "Ghost Matter Wavelength", "type": "progression" },
-    { "category": "base", "code": 1734473687, "name": "Imaging Rule", "type": "progression" },
-    { "category": "base", "code": 1734473688, "name": "Nomai Warp Codes", "type": "progression" },
-    { "category": "base", "code": 1734473689, "name": "Warp Core Installation Manual", "type": "progression" },
-    { "category": "base", "code": 1734473690, "name": "Entanglement Rule", "type": "progression" },
-    { "category": "base", "code": 1734473691, "name": "Shrine Door Codes", "type": "progression" },
-    { "category": "base", "code": 1734473692, "name": "Tornado Aerodynamic Adjustments", "type": "progression" },
-    { "category": "base", "code": 1734473693, "name": "Silent Running Mode", "type": "progression" },
-    { "category": "base", "code": 1734473694, "name": "Electrical Insulation", "type": "progression" },
-    { "category": "base", "code": 1734473695, "name": "Coordinates", "type": "progression" },
+    { "code": 21, "name": "Herb Catalyst", "type": "useful" },
+    { "code": 22, "name": "Pipe Vial", "type": "useful" },
+    { "code": 23, "name": "Tao Fruit", "type": "useful" },
+    { "code": 24, "name": "Greater Tao Fruit", "type": "useful" },
+    { "code": 25, "name": "Twin Tao Fruit", "type": "useful" },
+    { "code": 26, "name": "Computing Unit", "type": "useful" },
+    { "code": 27, "name": "Dark Steel", "type": "useful" },
 
-    { "category": "base", "code": 1734473697, "name": "Distress Beacon Frequency", "type": "progression" },
-    { "category": "base", "code": 1734473698, "name": "Quantum Fluctuations Frequency", "type": "progression" },
-    { "category": "base", "code": 1734473699, "name": "Hide & Seek Frequency", "type": "progression" },
+    { "code": 101, "name": "Abandoned Mines Access Token", "type": "progression" },
+    { "code": 102, "name": "Legend of the Porky Heroes", "type": "progression" },
+    { "code": 103, "name": "Ji's Hair", "type": "progression" },
+    { "code": 104, "name": "Tianhuo Serum", "type": "progression" },
+    { "code": 105, "name": "Elevator Access Token", "type": "progression" },
+    { "code": 106, "name": "Rhizomatic Bomb", "type": "useful" },
+    { "code": 107, "name": "Homing Darts", "type": "progression" },
+    { "code": 108, "name": "Thunderburst Bomb", "type": "progression" },
 
-    { "category": "base", "code": 1734473700, "name": "Chert's Signal", "type": "filler" },
-    { "category": "base", "code": 1734473701, "name": "Esker's Signal", "type": "filler" },
-    { "category": "base", "code": 1734473702, "name": "Riebeck's Signal", "type": "filler" },
-    { "category": "base", "code": 1734473703, "name": "Gabbro's Signal", "type": "filler" },
-    { "category": "base", "code": 1734473704, "name": "Feldspar's Signal", "type": "progression" },
-    { "category": "base", "code": 1734473705, "name": "Museum Shard Signal", "type": "filler" },
-    { "category": "base", "code": 1734473706, "name": "Grove Shard Signal", "type": "filler" },
-    { "category": "base", "code": 1734473707, "name": "Cave Shard Signal", "type": "filler" },
-    { "category": "base", "code": 1734473708, "name": "Tower Shard Signal", "type": "filler" },
-    { "category": "base", "code": 1734473709, "name": "Island Shard Signal", "type": "filler" },
-    { "category": "base", "code": 1734473710, "name": "Quantum Moon Signal", "type": "progression" },
-    { "category": "base", "code": 1734473711, "name": "Escape Pod 1 Signal", "type": "filler" },
-    { "category": "base", "code": 1734473712, "name": "Escape Pod 2 Signal", "type": "filler" },
-    { "category": "base", "code": 1734473713, "name": "Escape Pod 3 Signal", "type": "progression" },
-    { "category": "base", "code": 1734473714, "name": "Galena's Radio Signal", "type": "filler" },
-    { "category": "base", "code": 1734473715, "name": "Tephra's Radio Signal", "type": "filler" },
+    { "code": 109, "name": "Fusang Amulet", "type": "useful" },
+    { "code": 110, "name": "Multi-tool Kit", "type": "useful" },
+    { "code": 111, "name": "Ancient Music Sheet", "type": "progression" },
+    { "code": 112, "name": "Unknown Seed", "type": "progression" },
+    { "code": 113, "name": "GM Fertilizer", "type": "progression" },
+    { "code": 114, "name": "Sword of Jie", "type": "useful" },
+    { "code": 115, "name": "Antique Vinyl Record", "type": "useful" },
+    { "code": 116, "name": "Qiankun Board", "type": "useful" },
+    { "code": 117, "name": "Red Guifang Clay", "type": "useful" },
+    { "code": 118, "name": "Penglai Recipe Collection", "type": "useful" },
+    { "code": 119, "name": "Tiandao Academy Periodical", "type": "useful" },
+    { "code": 120, "name": "Kunlun Immortal Portrait", "type": "progression" },
+    { "code": 121, "name": "Virtual Reality Device", "type": "useful" },
+    { "code": 122, "name": "Ready-to-Eat Rations", "type": "useful" },
+    { "code": 123, "name": "The Four Treasures Of The Study", "type": "progression" },
 
-    { "code": 1734473716, "name": "Autopilot", "type": "useful" },
-    { "code": 1734473717, "name": "Landing Camera", "type": "useful" },
-    { "code": 1734473718, "name": "Eject Button", "type": "useful" },
-    { "code": 1734473719, "name": "Velocity Matcher", "type": "useful" },
-    { "code": 1734473720, "name": "Surface Integrity Scanner", "type": "useful" },
-    { "code": 1734473729, "name": "Oxygen Capacity Upgrade", "type": "useful" },
-    { "code": 1734473730, "name": "Fuel Capacity Upgrade", "type": "useful" },
-    { "code": 1734473731, "name": "Boost Duration Upgrade", "type": "useful" },
+    { "code": 124, "name": "Bloody Crimson Hibiscus", "type": "filler" },
+    { "code": 125, "name": "Ancient Penglai Ballad", "type": "progression" },
+    { "code": 126, "name": "Portrait of Yi", "type": "progression" },
+    { "code": 127, "name": "Poem Hidden in the Immortal's Portrait", "type": "filler" },
+    { "code": 128, "name": "Soul-Severing Blade", "type": "useful" },
+    { "code": 129, "name": "Firestorm Ring", "type": "useful" },
 
-    { "code": 1734473721, "name": "Oxygen Refill", "type": "filler" },
-    { "code": 1734473722, "name": "Jetpack Fuel Refill", "type": "filler" },
-    { "code": 1734473723, "name": "Marshmallow", "type": "filler" },
-    { "code": 1734473724, "name": "Perfect Marshmallow", "type": "filler" },
-    { "code": 1734473725, "name": "Burnt Marshmallow", "type": "filler" },
+    { "code": 130, "name": "Noble Ring", "type": "useful" },
+    { "code": 131, "name": "Passenger Token: Zouyan", "type": "filler" },
+    { "code": 132, "name": "Passenger Token: A-Shou", "type": "filler" },
+    { "code": 133, "name": "Passenger Token: Xipu", "type": "filler" },
+    { "code": 134, "name": "Passenger Token: Yangfan", "type": "filler" },
+    { "code": 135, "name": "Passenger Token: Jihai", "type": "filler" },
+    { "code": 136, "name": "Passenger Token: Aimu", "type": "filler" },
+    { "code": 137, "name": "Passenger Token: Shiyangyue", "type": "filler" },
+    { "code": 138, "name": "Gene Eradicator", "type": "useful" },
 
-    { "code": 1734473726, "name": "Ship Damage Trap", "type": "trap" },
-    { "code": 1734473727, "name": "Audio Trap", "type": "trap" },
-    { "code": 1734473728, "name": "Nap Trap", "type": "trap" },
+    { "code": 201, "name": "Central Core Chip", "type": "useful" },
+    { "code": 202, "name": "Power Reservoir Chip", "type": "useful" },
+    { "code": 203, "name": "Agricultural Zone Chip", "type": "useful" },
+    { "code": 204, "name": "Abandoned Mines Chip", "type": "useful" },
+    { "code": 205, "name": "Warehouse Zone Chip", "type": "useful" },
+    { "code": 206, "name": "Transmutation Zone Chip", "type": "useful" },
+    { "code": 207, "name": "Grotto of Scriptures Chip", "type": "useful" },
+    { "code": 208, "name": "Empyrean District Chip", "type": "useful" },
+    { "code": 209, "name": "Research Center Chip", "type": "useful" },
 
-    { "category": "dlc|hn1|hn2|fq", "code": 1734473733, "name": "Stranger Light Modulator", "type": "progression" },
-    { "category": "dlc", "code": 1734473734, "name": "Breach Override Codes", "type": "progression" },
-    { "category": "dlc", "code": 1734473735, "name": "River Lowlands Painting Code", "type": "progression" },
-    { "category": "dlc", "code": 1734473736, "name": "Cinder Isles Painting Code", "type": "progression" },
-    { "category": "dlc", "code": 1734473737, "name": "Hidden Gorge Painting Code", "type": "progression" },
-    { "category": "dlc", "code": 1734473738, "name": "Dream Totem Patch", "type": "progression" },
-    { "category": "dlc", "code": 1734473739, "name": "Raft Docks Patch", "type": "progression" },
-    { "category": "dlc", "code": 1734473740, "name": "Limbo Warp Patch", "type": "progression" },
-    { "category": "dlc", "code": 1734473741, "name": "Projection Range Patch", "type": "progression" },
-    { "category": "dlc", "code": 1734473742, "name": "Alarm Bypass Patch", "type": "progression" },
+    { "code": 301, "name": "Stasis Jade", "type": "useful" },
+    { "code": 302, "name": "Bearing Jade", "type": "useful" },
+    { "code": 303, "name": "Harness Force Jade", "type": "useful" },
+    { "code": 304, "name": "Iron Skin Jade", "type": "useful" },
+    { "code": 305, "name": "Hedgehog Jade", "type": "useful" },
+    { "code": 306, "name": "Pauper Jade", "type": "useful" },
+    { "code": 307, "name": "Steely Jade", "type": "useful" },
+    { "code": 308, "name": "Immovable Jade", "type": "useful" },
+    { "code": 309, "name": "Soul Reaper Jade", "type": "useful" },
+    { "code": 310, "name": "Avarice Jade", "type": "useful" },
+    { "code": 311, "name": "Revival Jade", "type": "useful" },
+    { "code": 312, "name": "Swift Descent Jade", "type": "useful" },
+    { "code": 313, "name": "Mob Quell Jade - Yin", "type": "useful" },
+    { "code": 314, "name": "Mob Quell Jade - Yang", "type": "useful" },
+    { "code": 315, "name": "Focus Jade", "type": "useful" },
+    { "code": 316, "name": "Swift Blade Jade", "type": "useful" },
+    { "code": 317, "name": "Breather Jade", "type": "useful" },
+    { "code": 318, "name": "Qi Swipe Jade", "type": "useful" },
+    { "code": 319, "name": "Qi Blade Jade", "type": "useful" },
+    { "code": 320, "name": "Divine Hand Jade", "type": "useful" },
+    { "code": 321, "name": "Cultivation Jade", "type": "useful" },
 
-    { "category": "base", "code": 1734473743, "name": "Deep Space Radio Frequency", "type": "progression" },
-    { "category": "base", "code": 1734473744, "name": "Radio Tower Signal", "type": "filler" },
-    { "category": "base", "code": 1734473745, "name": "Deep Space Satellite Signal", "type": "filler" },
+    { "code": 401, "name": "(Poison) Medicinal Citrine", "type": "useful" },
+    { "code": 402, "name": "(Poison) Golden Yinglong Egg", "type": "useful" },
+    { "code": 403, "name": "(Poison) Residual Hair", "type": "useful" },
+    { "code": 404, "name": "(Poison) Porcine Gem", "type": "useful" },
+    { "code": 405, "name": "(Poison) Plantago Frog", "type": "useful" },
+    { "code": 406, "name": "(Poison) Oriander", "type": "useful" },
+    { "code": 407, "name": "(Poison) Turtle Scorpion", "type": "useful" },
 
-    { "category": "base", "code": null, "name": "Victory - Song of Five", "type": "progression" },
-    { "category": "base", "code": null, "name": "Victory - Song of the Nomai", "type": "progression" },
-    { "category": "base&dlc", "code": null, "name": "Victory - Song of the Stranger", "type": "progression" },
-    { "category": "base&dlc", "code": null, "name": "Victory - Song of Six", "type": "progression" },
-    { "category": "base&dlc", "code": null, "name": "Victory - Song of Seven", "type": "progression" },
-    { "category": "dlc", "code": null, "name": "Victory - Echoes of the Eye", "type": "progression" },
+    { "code": 502, "name": "(Database) Apeman Surveillance Footage", "type": "filler" },
+    { "code": 503, "name": "(Database) Council Digital Signage", "type": "filler" },
+    { "code": 504, "name": "(Database) New Kunlun Launch Memorial", "type": "filler" },
+    { "code": 505, "name": "(Database) Council Tenets", "type": "filler" },
+    { "code": 506, "name": "(Database) Anomalous Root Node", "type": "filler" },
+    { "code": 507, "name": "(Database) Rhizomatic Energy Meter", "type": "filler" },
+    { "code": 508, "name": "(Database) Radiant Pagoda Control Panel", "type": "filler" },
+    { "code": 509, "name": "(Database) Dusk Guardian Recording Device 1", "type": "filler" },
+    { "code": 510, "name": "(Database) Lake Yaochi Stele", "type": "filler" },
+    { "code": 511, "name": "(Database) Yellow Water Report", "type": "filler" },
+    { "code": 512, "name": "(Database) Mutated Crops", "type": "filler" },
+    { "code": 513, "name": "(Database) Dusk Guardian Recording Device 2", "type": "filler" },
+    { "code": 514, "name": "(Database) Water Synthesis Pipeline Panel", "type": "filler" },
+    { "code": 515, "name": "(Database) Jie Clan Family Precept", "type": "filler" },
+    { "code": 516, "name": "(Database) Transmutation Furnace Monitor", "type": "filler" },
+    { "code": 517, "name": "(Database) Dusk Guardian Recording Device 4", "type": "filler" },
+    { "code": 518, "name": "(Database) Guard Production Station", "type": "filler" },
+    { "code": 519, "name": "(Database) Cave Stone Inscription", "type": "filler" },
+    { "code": 520, "name": "(Database) Dead Person's Note", "type": "filler" },
+    { "code": 521, "name": "(Database) Camp Scroll", "type": "filler" },
+    { "code": 522, "name": "(Database) Warehouse Database", "type": "filler" },
+    { "code": 523, "name": "(Database) Dusk Guardian Recording Device 3", "type": "filler" },
+    { "code": 524, "name": "(Database) Ancient Weapon Console", "type": "filler" },
+    { "code": 525, "name": "(Database) Hexachrem Vault Scroll", "type": "filler" },
+    { "code": 526, "name": "(Database) Ancient Cave Painting", "type": "filler" },
+    { "code": 527, "name": "(Database) Coffin Inscription", "type": "filler" },
+    { "code": 528, "name": "(Database) Stone Carvings", "type": "filler" },
+    { "code": 529, "name": "(Database) Secret Mural I", "type": "filler" },
+    { "code": 530, "name": "(Database) Secret Mural II", "type": "filler" },
+    { "code": 531, "name": "(Database) Secret Mural III", "type": "filler" },
+    { "code": 532, "name": "(Database) Stowaway's Corpse", "type": "filler" },
+    { "code": 533, "name": "(Database) Empyrean Bulletin Board", "type": "filler" },
+    { "code": 534, "name": "(Database) Dusk Guardian Recording Device 5", "type": "filler" },
+    { "code": 535, "name": "(Database) Vital Sanctum Tower Monitoring Panel", "type": "filler" },
+    { "code": 536, "name": "(Database) Dusk Guardian Recording Device 6", "type": "filler" },
+    { "code": 537, "name": "(Database) Dusk Guardian Headquarters", "type": "filler" },
+    { "code": 538, "name": "(Database) Farmland Markings", "type": "filler" },
+    { "code": 539, "name": "(Database) Evacuation Notice For Miners", "type": "filler" },
+    { "code": 540, "name": "(Database) Prisoner's Bamboo Scroll I", "type": "filler" },
+    { "code": 541, "name": "(Database) Prisoner's Bamboo Scroll II", "type": "filler" },
+    { "code": 542, "name": "(Database) Pharmacy Panel", "type": "filler" },
+    { "code": 543, "name": "(Database) Haotian Sphere Model", "type": "filler" },
+    { "code": 544, "name": "(Database) Galactic Dock Sign", "type": "filler" },
+    { "code": 545, "name": "(Database) Underground Water Tower", "type": "filler" },
 
-    { "category": "hn1", "code": 1734473752, "name": "Neighbor's Distress Signal Frequency", "type": "progression" },
-    { "category": "hn1", "code": 1734473753, "name": "Lava Core Signals Frequency", "type": "progression" },
-    { "category": "hn1", "code": 1734473754, "name": "Galactic Communication Frequency", "type": "progression" },
-
-    { "category": "ac", "code": 1734473755, "name": "Astral Codec Frequency", "type": "progression" },
-
-    { "category": "hn2", "code": 1734473756, "name": "Memory Cube Interface", "type": "progression" },
-    { "category": "hn2", "code": 1734473757, "name": "Magistarium Library Access Code", "type": "progression" },
-    { "category": "hn2", "code": 1734473758, "name": "Magistarium Dormitory Access Code", "type": "progression" },
-    { "category": "hn2", "code": 1734473759, "name": "Magistarium Engine Access Code", "type": "progression" },
-
-    { "category": "fq", "code": 1734473760, "name": "Hearthian Radio Frequency", "type": "progression" }
+    { "code": 601, "name": "Jin x800", "type": "filler" },
+    { "code": 602, "name": "Jin x320", "type": "filler" },
+    { "code": 603, "name": "Jin x50", "type": "filler" },
+    { "code": 604, "name": "Basic Component", "type": "filler" },
+    { "code": 605, "name": "Standard Component", "type": "filler" },
+    { "code": 606, "name": "Advanced Component", "type": "filler" }
 ]
